more frontend changes

--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "@mui/x-date-pickers": "6.19.5",
     "@phosphor-icons/react": "2.0.15",
     "@react-pdf/renderer": "3.3.8",
+    "@stomp/stompjs": "^7.0.0",
     "@tiptap/extension-link": "2.2.4",
     "@tiptap/extension-placeholder": "2.2.4",
     "@tiptap/react": "2.2.4",
     "@tiptap/starter-kit": "2.2.4",
     "axios": "^1.7.8",
-    "dayjs": "1.11.10",
+    "dayjs": "^1.11.10",
     "embla-carousel": "8.0.0",
     "embla-carousel-react": "8.0.0",
     "i18next": "23.10.0",
@@ -64,6 +65,7 @@
     "react-simple-maps": "3.0.0",
     "react-syntax-highlighter": "15.5.0",
     "recharts": "2.12.1",
+    "sockjs-client": "^1.6.1",
     "sonner": "1.4.1",
     "stylis": "4.3.1",
     "stylis-plugin-rtl": "2.1.1",
@@ -80,6 +82,7 @@
     "@types/react-dom": "18.2.19",
     "@types/react-simple-maps": "3.0.4",
     "@types/react-syntax-highlighter": "15.5.11",
+    "@types/sockjs-client": "^1.5.4",
     "@vercel/style-guide": "5.2.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
