--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@devias-kit-pro/nextjs-starter",
+  "name": "data-centrix-notification-system",
   "author": "Devias IO",
   "version": "7.0.0",
   "private": true,
