--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "sonner": "1.4.1",
     "stylis": "4.3.1",
     "stylis-plugin-rtl": "2.1.1",
+    "sweetalert2": "^11.14.5",
+    "sweetalert2-react-content": "^5.0.7",
     "zod": "3.22.4"
   },
   "devDependencies": {
